# spatial-cluster-compare

./: .gitignore  CITATION.cff  CONTRIBUTING.md  LICENSE  README.md  pyproject.toml
.github/workflows/: publish.yml  tests.yml
docs/: 02_comparaison_cluster.md
notebooks/: Comparaison_des_clusters.ipynb
src/spatial_cluster_compare/: __init__.py  api.py  benchmark.py  metrics.py  preprocessing.py  selection.py  viz.py
tests/: test_pipeline.py
