[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "spatial-cluster-compare"
version = "0.1.2"
description = "Comparaison automatisée d'algorithmes de clustering pour données de spatial proteomics / cytométrie"
readme = "README.md"
requires-python = ">=3.9"
license = { text = "MIT" }
authors = [
    { name = "Mathis Bouvet" }
]
keywords = ["clustering", "spatial-proteomics", "bioinformatics", "single-cell"]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Topic :: Scientific/Engineering :: Bio-Informatics",
]
dependencies = [
    "numpy>=1.21",
    "pandas>=1.3",
    "scikit-learn>=1.0",
    "scipy>=1.7",
    "matplotlib>=3.4",
    "seaborn>=0.11",
]

[project.optional-dependencies]
dev = ["pytest>=7.0"]

[project.urls]
Homepage = "https://github.com/mathisbouvet/spatial-cluster-compare"

[tool.hatch.build.targets.wheel]
packages = ["src/spatial_cluster_compare"]
